--- a/a2.html
+++ b/a2.html
@@ -11,7 +11,15 @@
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
   <link rel="stylesheet" href="https://acupun.site/lecture/html5_CSS_javascript/3-css1.css"/>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GVX9C59VLJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-GVX9C59VLJ');
+</script>
 </head>
 
 <body>
