--- a/a3.html
+++ b/a3.html
@@ -20,6 +20,15 @@
   }
 
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GVX9C59VLJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GVX9C59VLJ');
+</script>
 </head>
 
 <body>
