--- a/a5.html
+++ b/a5.html
@@ -11,19 +11,8 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link href="css/mystyle.css" rel="stylesheet" type="text/css">
 
-
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
-  <link href="https://acupun.site/lecture/html5_CSS_javascript/3-css1.css" rel="stylesheet"/>
-  <script>
-  function show()
-  {
-    a1 = parseInt(t1.value)
-    a2 = parseInt(t2.value)
-    t3.value = a1+a2
-  }
-
-  </script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GVX9C59VLJ"></script>
 <script>
@@ -65,19 +54,26 @@
 	    </div><!--close banner_image-->	  
 		
 		<div class="content_item">		
-		  <h1>javascript：計算加法</h1>
+		  <h1>Welcome To Your Website</h1>
       <hr>
-      <div class="red">
-        <input id="t1" value="3" class="red center" size="5" type="text"/>
-        +
-        <input id="t2" value="5" class="red center" size="5" type="text"/>
-        =
-        <input id="t3" class="red center" size="5" type="text"/>
-        <br>
-        <input onclick="show()" class="red" type="button" value="計算">
-    </div>
-      <br>
+      <p>
+          <img src="images/gsc-1.png" width="80%">
+          <h2>圖1：網站認證</h2>
+      </p>
+      <p>
+          <img src="images/gsc-2.png" width="80%">
+          <h2>圖2：SiteMap認證</h2>
+      </p>
+      <p>
+          <img src="images/gsc-3.png" width="80%">
+          <h2>圖3：網址審查</h2>
+      </p>
+      <p>
+          <img src="images/gsc-4.png" width="80%">
+          <h2>圖4：SEO的<span class="red">TDK設定</span></h2>
+      </p>
 
+      
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you would like to remove the 'website template by ARaynorDesign' link from the footer of a template / website then that is OK, providing you make a small donation via the website. I do not specify an amount, just what you think the design is worth.</p>
        
         </div><!--close content_item-->
