--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
-  <title>陳擎文</title>
-  <meta name="description" content="free website template" />
-  <meta name="keywords" content="enter your keywords here" />
+  <title>A0001陳擎文作業4</title>
+  <meta name="Description" content="這個網站由A0001陳擎文製作的作業4，內容是CSS的第3種進階應用，讀取外部css檔案">
+  <meta name="keywords" content="陳擎文,作業4,CSS, GA">
+  
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=9" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link href="css/mystyle.css" rel="stylesheet" type="text/css">
+
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/image_slide.js"></script>
   <!-- Google tag (gtag.js) -->
@@ -36,6 +39,8 @@
             <li><a href="a2.html">第2題</a></li>
             <li><a href="a3.html">第3題</a></li>
             <li><a href="a4.html">第4題</a></li>
+            <li><a href="a5.html">GSC圖片</a></li>
+            <li><a href="a6.html">GA圖片</a></li>
           </ul>
         </div><!--close menubar-->
       </div><!--close header-->	  			  
