--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>A0001陳擎文作業4</title>
   <meta name="Description" content="這個網站由A0001陳擎文製作的作業4，內容是CSS的第3種進階應用，讀取外部css檔案">
   <meta name="keywords" content="陳擎文,作業4,CSS, GA">
+  <meta name="google-site-verification" content="WNNN_LItjWYI7t7zVreYT3t4wndhRpO8EuBQ5ito1oc" />
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=9" />
