--- a/a5.html
+++ b/a5.html
@@ -58,6 +58,10 @@
 		  <h1>Welcome To Your Website</h1>
       <hr>
       <p>
+        <a id="line" href="https://line.me/R/ti/g/pK9Mt4GSTo" target="_blank">加入本公司的Line群組</a>
+        
+      </p>
+      <p>
           <img src="images/gsc-1.png" width="80%">
           <h2>圖1：網站認證</h2>
       </p>
