--- a/a6.html
+++ b/a6.html
@@ -60,20 +60,20 @@
           <hr>
           <p>
               <img src="images/ga-1.png" width="80%">
-              <h2>圖1：活躍使用者人數 (Active Users)：<span class="red">有多少「不同USER ID的使用者」</span></h2>
-              <h2>觀看人數 (Pageviews)：頁面瀏覽量</h2>
-  
+              <h2>圖1：GA4的自訂事件(Custom Event)，add_line</h2>  
           </p>
           <p>
               <img src="images/ga-2.png" width="80%">
-              <h2>圖2：事件計數的即時報表(Real-time report of Event Count)</h2>
-              <h2>page_view (頁面瀏覽)=9：瀏覽9次</h2>
-              <h2>user_engagement (用戶互動)=7：<span class="red">有7次使用者互動</span>(停留超過10秒，或由A網頁切換到B網頁)。<sppan class="red">它反映了使用者在網站上的參與情況</sppan></h2>            
-              <h2>first_visit (首次訪問)=1：有一位新使用者首次造訪網站，<span class="red">它反映了新用戶的增加情況</span></h2>
-              <h2>session_start (拜訪開始)：每次使用者訪問網站時自動觸發這個事件，標誌著一次新的訪問開始。如果使用者在30分鐘內沒進行操作GA會自動認為這次會話結束。<span class="red">這個事件可以用來追蹤總訪問量</span></h2>
-  
+              <h2>圖2：GA4的重要轉換事件(Important Event， Conversion)</h2>
           </p>
-
+          <p>
+            <img src="images/ga-3.png" width="80%">
+            <h2>圖3：Google Tag Assistant的點擊事件</h2>
+          </p>
+          <p>
+            <img src="images/ga-4.png" width="80%">
+            <h2>圖4：Google Tag Assistant的自訂事件</h2>
+          </p>
 
 
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you would like to remove the 'website template by ARaynorDesign' link from the footer of a template / website then that is OK, providing you make a small donation via the website. I do not specify an amount, just what you think the design is worth.</p>
