--- a/a6.html
+++ b/a6.html
@@ -59,8 +59,8 @@
 		  <h1>Welcome To Your Website</h1>
           <hr>
           <p>
-            <a class="s2" href="https://www.newebpay.com/website/Page/content/service_creditcard" target="_blank">下單購買(使用藍新金流NewebPay)</a>
-          </p>	
+            <a class="red1" href="https://www.newebpay.com/website/Page/content/service_creditcard" target="_blank">下單購買(使用藍新金流NewebPay)</a>
+          </p>
           <p>
               <img src="images/ga-1.png" width="80%">
               <h2>圖1：GA4的自訂事件(Custom Event)，add_line</h2>  
